# facetimelapse

./: CMakeLists.txt  functions.h  stuctures.h
app/: CMakeLists.txt
app/include/: SDL_fonction.h
app/src/: SDL_main.c
cmake/: FetchSDL2.cmake
doc/: CR_reunion02_04.txt  CR_reunion_08_04.txt  CR_reunion_13_03.txt  CR_reunion_26_03.txt  doxygen.txt
docs/: CR_reunion_08_04.txt  CR_reunion_20_03.txt  CR_réunion_22_04.txt
lib/: CMakeLists.txt
lib/include/: BMPFile.h  fichier.h  functions.h
lib/src/: BMPFile.c  fichier.c  functions.c
source/models/: BMPFile.h  Makefile  doxygen.h  functions.c  functions.h  main.c  structures.h  stuctures.h  test.c  test.h
source/program/: BMPFile.c  Makefile  SDL.c  SDL.cpp  SDL_fonction.h  SDL_main.c  fichier.c  fichier.h  functions.c  functions.h  structures.h
